infra/openshift/auth-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  selector:
    app: auth-service
  ports:
    - name: http
      port: 8001
      targetPort: 8001
